update flights log
